--- a/style.css
+++ b/style.css
@@ -110,13 +110,17 @@
 }
 .header__menu-link {
   position: relative;
+  transition: all 0.3s;
 }
-.header__menu-link.active {
-  background: var(--color-primary);
+.header__menu-link:hover {
+  color: var(--color-primary);
+}
+/* .header__menu-link.active {
+  color: var(--color-primary);
+  background: currentColor;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
+} */
 .header__menu-link::after {
   content: "";
   position: absolute;
@@ -125,7 +129,11 @@
   border-radius: 99rem;
   bottom: -10px;
   left: 0;
-  background-color: inherit;
+  transition: all 0.3 ease;
+}
+
+.header__menu-link:hover::after {
+  background-color: var(--color-primary);
 }
 
 /*=============section product============*/
@@ -134,7 +142,7 @@
   margin-bottom: var(--space-48);
 }
 .background {
-  background-color: var(--color-gray);
+  background-color: #f5f6f8;
   width: 100vw;
   position: absolute;
   left: calc(-50vw + 50%);
@@ -292,12 +300,15 @@
   margin-bottom: var(--space-48);
 }
 .slide__top {
-  margin-bottom: var(--space-48);
+  margin-bottom: 4.5rem;
+}
+.slide__top > .h3-title {
+  margin-bottom: 0.8rem;
 }
 .h3-title {
   font-size: 1.8rem;
   font-weight: 500;
-  margin-bottom: var(--space-8);
+  margin-bottom: 2.8rem;
 }
 
 .sub-title {
@@ -319,7 +330,11 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
+.card-slide__text {
+  color: #3e3e3e;
+  font-weight: 500;
+  text-align: center;
+}
 /* .slide-box__item:hover {
   transform: scale(1.1);
 } */
@@ -333,6 +348,9 @@
 .card-slide__content {
   margin-top: var(--space-24);
   text-align: center;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #3e3e3e;
 }
 
 .slide-unique__list {
@@ -344,7 +362,13 @@
   background-color: var(--color-white);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 }
-
+.card-unique__media {
+  padding: 0.8rem;
+}
+/* .card-unique__media img {
+  width: 180px;
+  height: 180px;
+} */
 /*========================collection-slide-=================*/
 .collection-tab {
   margin-bottom: var(--space-48);
@@ -367,11 +391,11 @@
   padding-bottom: var(--space-30);
   border-bottom: 2px solid var(--color-gray);
   cursor: pointer;
+  transition: all 0.3s;
 }
-
-.tab-menu__item.active {
+.tab-menu__item:hover {
   color: var(--color-primary);
-  border-bottom: 2px solid var(--color-primary);
+  border-bottom: 2px solid currentColor;
 }
 
 .tab-show__product {
@@ -432,15 +456,30 @@
 .btn-toggle {
   display: none;
 
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  position: relative;
 }
-.btn-toggle div {
-  height: 2px;
+
+.box__toggle {
+  position: absolute;
+  left: 50%;
+  top: 43%;
+  transform: translate(-50%, -50%);
+}
+.btn-toggle span {
+  height: 2.5px;
   width: 2rem;
-  background-color: #292929;
+  background-color: #5f5f5f;
   margin-bottom: 3px;
+  border-radius: 99rem;
+  display: block;
+}
+.btn-toggle span:nth-child(2) {
+  width: 1.5rem;
+}
+.btn-toggle span:nth-child(3) {
+  width: 1rem;
 }
 .bg {
   visibility: hidden;
@@ -448,17 +487,38 @@
 .btn-toggle-x {
   visibility: hidden;
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 30px;
+  right: 60px;
   z-index: -1;
   cursor: pointer;
   transition: all 0.4s ease;
   font-size: 5rem;
 }
+.btn-toggle-x .span {
+  display: block;
+  width: 3rem;
+  height: 0.3rem;
+  background-color: #5f5f5f;
+  border-radius: 99rem;
+  position: absolute;
+}
 .register__content span {
   font-size: 1.6rem;
   color: white;
   font-weight: 500;
+  position: absolute;
+}
+.div {
+  position: relative;
+  cursor: pointer;
+  padding: 0.5rem;
+  display: block;
+}
+.btn-toggle-x .span:nth-child(1) {
+  transform: rotate(45deg);
+}
+.btn-toggle-x .span:nth-child(2) {
+  transform: rotate(-45deg);
 }
 
 main {
@@ -498,9 +558,9 @@ main {
   background-color: #3f65ea;
   border-radius: 99rem;
 
-  width: 2.4rem;
-  height: 2.4rem;
-  padding: 0.5rem;
+  width: 3.4rem;
+  height: 3.4rem;
+  padding: 1rem;
 }
 .footer__right {
   flex-grow: 1;
@@ -548,8 +608,27 @@ label.title {
 
   gap: 4.8rem;
 }
+.product__item.card-product,
+.slide-box__item,
+.card-product,
+.card-text__item {
+  scroll-snap-align: end;
+}
+
 /*====================responsive===========================*/
-@media (max-width: 991.98px) {
+@media only screen and (max-width: 991.98px) {
+  .collection-slide {
+    margin-bottom: 6rem;
+  }
+  .collection-tab {
+    margin-bottom: 8rem;
+  }
+  .slide-box {
+    margin-top: 2.8rem;
+  }
+  .tab-menu {
+    margin-bottom: 0;
+  }
   .header__top {
     justify-content: space-between;
   }
@@ -621,6 +700,9 @@ label.title {
     width: 0;
     display: none;
   }
+  .collection-product {
+    margin-bottom: 2.8rem;
+  }
 
   *::-webkit-scrollbar-track {
     /* background-color: var(--color-light);
@@ -638,7 +720,7 @@ label.title {
   .tab-menu__list {
     grid-template-columns: unset;
     grid-auto-flow: column;
-    grid-gap: 1.5rem;
+    grid-gap: 2.4rem;
     overflow: auto;
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
@@ -647,25 +729,23 @@ label.title {
     touch-action: manipulation;
     -webkit-overflow-scrolling: touch;
     padding: 2rem 0;
-    padding-left: 2rem;
-    margin-left: -2rem;
   }
 
-  main > li {
-    scroll-snap-align: start;
-  }
   .product__list,
   .tab-show__product {
-    grid-auto-columns: 300px;
+    grid-auto-columns: 31.5%;
+    gap: 2.4rem;
   }
   .slide-box__list {
-    grid-auto-columns: 128px;
+    grid-auto-columns: 144px;
+    padding: 0;
   }
   .slide-unique__list {
-    grid-auto-columns: 19.5rem;
+    grid-auto-columns: 194px;
   }
   .tab-menu__list {
     grid-auto-columns: 33.333%;
+    margin-bottom: 0.8rem;
   }
   .card-text__item {
     flex-direction: column;
@@ -685,11 +765,24 @@ label.title {
   /*======footer====*/
 
   .footer__mid {
-    gap: 4.8rem;
+    gap: 2rem;
+  }
+  .slide-box__item {
+    padding: 0.2rem;
+  }
+  .slide-unique__list {
+    padding-left: 2rem;
+  }
+  .card-product--white:nth-child(1) {
+    margin-left: -1.5rem;
+  }
+  .register__title {
+    font-size: 1.4rem;
+    line-height: calc(24 / 14);
   }
 }
 
-@media (max-width: 767.98px) {
+@media only screen and (max-width: 767.98px) {
   .footer__left {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -723,20 +816,36 @@ label.title {
   .footer__left {
     order: 2;
   }
-  .register__title {
-    font-size: 1.4rem;
+  .collection-tab {
+    margin-bottom: 7rem;
+  }
+  .collection-slide {
+    margin-bottom: 4rem;
+  }
+  .slide__top {
+    margin-bottom: 7rem;
   }
 }
 
-@media (max-width: 575.98px) {
-  .product__list,
+@media only screen and (max-width: 575.98px) {
   .tab-show__product {
-    grid-auto-columns: 90%;
+    grid-auto-columns: 65%;
+    padding: 0 0 40px;
+    margin-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 2.5rem;
+  }
+  .product__list {
+    grid-auto-columns: 100%;
     padding: 0 0 40px;
     margin-left: 0;
   }
+  .slide-box__list {
+    grid-auto-columns: 48%;
+  }
   .tab-menu__item {
     font-size: 1.4rem;
+    padding: 1.6rem;
   }
   .btn-help {
     display: none;
@@ -760,8 +869,8 @@ label.title {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
     -webkit-overflow-scrolling: touch;
-    scroll-padding: 1rem;
-    padding-bottom: 2rem;
+    /* scroll-padding: 1rem; */
+    /* padding-bottom: 2rem; */
 
     grid-auto-columns: 100%;
   }
@@ -776,6 +885,7 @@ label.title {
   .register__content span {
     font-size: 1.6rem;
     color: white;
+    line-height: 0.4;
   }
   .btn-Subscribe {
     position: static;
@@ -862,6 +972,18 @@ label.title {
   }
   .footer__bottom {
     justify-content: center;
+  }
+  .slide-unique__list {
+    padding-right: 1rem;
+    margin-right: -1rem;
+  }
+  .footer__social-item {
+    width: 2.4rem;
+    height: 2.4rem;
+    padding: 0.6rem;
+  }
+  .footer__item {
+    max-height: 4.8rem;
   }
 }
 
